# AI_and_ML_Projects

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: study_note_agent.yml
1_kmeans/: Kmeans.py
AI_Agent_2/: main.py
New folder/: hacker1_1.py
RAG/: README.md  main.py  rag.ipynb
agents/daily_quote_agent/: orchestrator.py  validator.py
agents/study_note_agent/: .pre-commit-config.yaml  README.md  agent.py  constants.py  email_types.py  logging_config.py  main.py  pyproject.toml
agents/study_note_agent/config/: config.toml
agents/study_note_agent/services/: gmail_service.py  llm_service.py  notes_service.py  web_service.py  youtube.py  youtube_service.py
agents/study_note_agent/skills/: default.md
agents/study_note_agent/tests/: test_agent.py  test_circuit_breaker.py  test_config_load.py  test_gmail_extract.py  test_notes_sanitization.py  test_whatsapp_service.py  test_youtube_service.py
daily_quote_agent/: db_utils.py  formatter.py  llm_client.py  main.py  publisher.py
machine_learning/New folder/: data.csv  hacker1.py  hacker2.py  ml.py
machine_learning/kmeans/: README.md
machine_learning/youtube_video_comments_analyzer/: app.py  predict.py  youtube_comments.py
machine_learning/youtube_video_comments_analyzer/static/: styles.css
machine_learning/youtube_video_comments_analyzer/templates/: error.html  index1.html  video_info.html
study_note_agent/: .pre-commit-config.yaml  README.md  agent.py  constants.py  logging_config.py  main.py  pyproject.toml
study_note_agent/services/: gmail_service.py  llm_service.py  notes_service.py  whatsapp_service.py
study_note_agent/skills/: default.md  system_design.md
study_note_agent/tests/: test_circuit_breaker.py  test_config_load.py
youtube_video_comments_analyzer/: transcript.py
youtube_video_comments_analyzer/templates/: index.html
