[project]
name = "ml-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "numpy>=2.3.1",
    "openai>=1.99.9",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
    "schedule>=1.2.2",
]

[tool.uv.workspace]
members = [
    "study_note_agent",
]
