[project]
name = "study-note-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
    "dotenv>=0.9.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
